--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Word Game</title>
+  <title>Word Master</title>
   <base href="/">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,5 +23,25 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 </body>
+
+
+
+<script>
+    $(document).ready(function () {
+     
+       
+      //Disable part of page
+      $('#play-area').bind('cut copy paste', function (e) {
+          e.preventDefault();
+      });
+  
+      //Disable mouse right click
+      $("#play-area").on("contextmenu",function(e){
+          return false;
+      });
+  });
+  
+  </script>
+  
 
 </html>
